# memory_mcp

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
memory_mcp/: __main__.py  config.py  db.py  scanner.py  server.py
memory_mcp/parsers/: __init__.py  base.py  claude_code.py  claude_history.py  omp.py  opencode.py
memory_mcp/tools/: memory.py  sessions.py
tests/: test_e2e.py
