[project]
name = "memory-mcp"
version = "0.1.0"
description = "MCP server for persistent AI session memory and cross-session search"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.20.0",
]

[project.scripts]
memory-mcp = "memory_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
